@@ -3,6 +3,7 @@ package ru.practicum.shareit.item;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.model.Item;
@@ -10,58 +11,56 @@ import ru.practicum.shareit.request.ItemRequest;
 import ru.practicum.shareit.request.ItemRequestMapper;
 import ru.practicum.shareit.request.ItemRequestService;
 import ru.practicum.shareit.request.dto.ItemRequestDto;
-import ru.practicum.shareit.user.UserMapper;
 import ru.practicum.shareit.user.UserService;
 import ru.practicum.shareit.user.model.User;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
-    private final Map<Long, Item> items = new HashMap<>();
-    private Long idCounter = 1L;
+    private final ItemRepository itemRepository;
     private final UserService userService;
     private final ItemRequestService itemRequestService;
 
     @Override
+    @Transactional
     public ItemDto addItem(ItemDto itemDto, Long ownerId) {
         log.info("Adding new item '{}' for owner ID: {}", itemDto.getName(), ownerId);
 
-        User owner = UserMapper.toUser(userService.getUserById(ownerId));
+        User owner = userService.getUserEntityById(ownerId);
         ItemRequest request = null;
 
         if (itemDto.getRequestId() != null) {
             log.debug("Item has request ID: {}", itemDto.getRequestId());
             ItemRequestDto requestDto = itemRequestService.getRequestById(itemDto.getRequestId());
-            User requestor = UserMapper.toUser(userService.getUserById(requestDto.getRequestorId()));
-            request = ItemRequestMapper.toItemRequest(requestDto, requestor);
+            request = ItemRequestMapper.toItemRequest(requestDto,
+                    userService.getUserEntityById(requestDto.getRequestorId()));
         }
 
         Item item = ItemMapper.toItem(itemDto, owner, request);
-        item.setId(idCounter);
-        items.put(item.getId(), item);
-        idCounter++;
+        Item savedItem = itemRepository.save(item);
 
         log.debug("Added item: ID={}, Name={}, Owner={}, Request={}",
-                item.getId(), item.getName(), ownerId, itemDto.getRequestId());
+                savedItem.getId(), savedItem.getName(), ownerId, itemDto.getRequestId());
 
-        return ItemMapper.toItemDto(item);
+        return ItemMapper.toItemDto(savedItem);
     }
 
     @Override
+    @Transactional
     public ItemDto updateItem(Long itemId, ItemDto itemDto, Long ownerId) {
         log.info("Updating item ID: {} for owner ID: {}", itemId, ownerId);
 
-        Item existingItem = items.get(itemId);
-        if (existingItem == null) {
-            log.warn("Item not found for update: ID={}", itemId);
-            throw new NotFoundException("Item not found with id: " + itemId);
-        }
+        Item existingItem = itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                    log.warn("Item not found for update: ID={}", itemId);
+                    return new NotFoundException("Item not found with id: " + itemId);
+                });
 
         if (!existingItem.getOwner().getId().equals(ownerId)) {
             log.warn("User {} is not owner of item {}", ownerId, itemId);
@@ -76,24 +75,26 @@ public class ItemServiceImpl implements ItemService {
         if (itemDto.getDescription() != null) existingItem.setDescription(itemDto.getDescription());
         if (itemDto.getAvailable() != null) existingItem.setAvailable(itemDto.getAvailable());
 
-        log.debug("Updated item: ID={}, Name: {} -> {}, Description: {} -> {}, Available: {} -> {}",
-                itemId, originalName, existingItem.getName(),
-                originalDesc != null ? originalDesc.substring(0, Math.min(20, originalDesc.length())) + "..." : "null",
-                existingItem.getDescription() != null ? existingItem.getDescription().substring(0, Math.min(20, existingItem.getDescription().length())) + "..." : "null",
-                originalAvailable, existingItem.getAvailable());
+        Item updatedItem = itemRepository.save(existingItem);
 
-        return ItemMapper.toItemDto(existingItem);
+        log.debug("Updated item: ID={}, Name: {} -> {}, Description: {} -> {}, Available: {} -> {}",
+                itemId, originalName, updatedItem.getName(),
+                originalDesc != null ? originalDesc.substring(0, Math.min(20, originalDesc.length())) + "..." : "null",
+                updatedItem.getDescription() != null ? updatedItem.getDescription().substring(0, Math.min(20, updatedItem.getDescription().length())) + "..." : "null",
+                originalAvailable, updatedItem.getAvailable());
+
+        return ItemMapper.toItemDto(updatedItem);
     }
 
     @Override
     public ItemDto getItemById(Long itemId) {
         log.debug("Fetching item by ID: {}", itemId);
 
-        Item item = items.get(itemId);
-        if (item == null) {
-            log.warn("Item not found: ID={}", itemId);
-            throw new NotFoundException("Item not found with id: " + itemId);
-        }
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                    log.warn("Item not found: ID={}", itemId);
+                    return new NotFoundException("Item not found with id: " + itemId);
+                });
 
         return ItemMapper.toItemDto(item);
     }
@@ -102,10 +103,10 @@ public class ItemServiceImpl implements ItemService {
     public List<ItemDto> getAllItemsByOwner(Long ownerId) {
         log.debug("Fetching all items for owner ID: {}", ownerId);
 
-        List<ItemDto> result = items.values().stream()
-                .filter(item -> item.getOwner().getId().equals(ownerId))
+        List<Item> items = itemRepository.findByOwnerIdOrderById(ownerId);
+        List<ItemDto> result = items.stream()
                 .map(ItemMapper::toItemDto)
-                .toList();
+                .collect(Collectors.toList());
 
         log.debug("Found {} items for owner ID: {}", result.size(), ownerId);
         return result;
@@ -120,15 +121,10 @@ public class ItemServiceImpl implements ItemService {
             return Collections.emptyList();
         }
 
-        String searchText = text.toLowerCase();
-        List<ItemDto> result = items.values().stream()
-                .filter(item -> Boolean.TRUE.equals(item.getAvailable()))
-                .filter(item ->
-                        (item.getName() != null && item.getName().toLowerCase().contains(searchText)) ||
-                                (item.getDescription() != null && item.getDescription().toLowerCase().contains(searchText))
-                )
+        List<Item> foundItems = itemRepository.searchAvailableItems(text.toLowerCase());
+        List<ItemDto> result = foundItems.stream()
                 .map(ItemMapper::toItemDto)
-                .toList();
+                .collect(Collectors.toList());
 
         log.debug("Found {} items for search: '{}'", result.size(), text);
         return result;
@@ -138,12 +134,10 @@ public class ItemServiceImpl implements ItemService {
     public Item getItemEntityById(Long itemId) {
         log.debug("Fetching item entity by ID: {}", itemId);
 
-        Item item = items.get(itemId);
-        if (item == null) {
-            log.warn("Item entity not found: ID={}", itemId);
-            throw new NotFoundException("Item not found with id: " + itemId);
-        }
-
-        return item;
+        return itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                    log.warn("Item entity not found: ID={}", itemId);
+                    return new NotFoundException("Item not found with id: " + itemId);
+                });
     }
 }
